New global exceptions, fixed tests, more tests to success and exceptions