@@ -1,19 +1,31 @@
 package com.bookslibrary.service;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.anyString;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.when;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Optional;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+
 import com.bookslibrary.entity.BookEntity;
+import com.bookslibrary.exception.ResouceNotFoundException;
 import com.bookslibrary.repository.BookRepository;
 
 @SpringBootTest
@@ -28,6 +40,8 @@ public class BookServiceTest {
 
     private BookEntity bookEntity1;
     private BookEntity bookEntity2;
+
+    Pageable pageable = PageRequest.of(0, 10);
 
     @BeforeEach
     void setUp(){
@@ -45,41 +59,95 @@ public class BookServiceTest {
 
         bookRepository.save(bookEntity1);
         bookRepository.save(bookEntity2);
-    }
-    
-    @Test
-    void testFilterBooksByAuthorAndTitle() {
-        when(bookRepository.findByAuthorContainingAndTitleContaining(anyString(), anyString()))
-                .thenReturn(List.of(bookEntity1));
 
-        List<BookEntity> result = bookService.filterBooksBy("The Hobbit", "Tolkien");
-        assertThat(result).hasSize(1).contains(bookEntity1);
     }
 
     @Test
-    void testFilterBooksByTitle() {
-        when(bookRepository.findByTitleContaining(anyString()))
-                .thenReturn(List.of(bookEntity1, bookEntity2));
+    void testFindPageableWithQueryParam_Success(){
+        
+        Page<BookEntity> bookPage = new PageImpl<>(Arrays.asList(bookEntity1, bookEntity2));
 
-        List<BookEntity> result = bookService.filterBooksBy("The", null);
-        assertThat(result).hasSize(2).contains(bookEntity1, bookEntity2);
+        when(bookRepository.findByTitleContainingIgnoreCaseOrAuthorContainingIgnoreCase("Hobbit", "Hobbit", pageable)).thenReturn(bookPage);
+        
+        Page<BookEntity> result = bookService.findPageable("Hobbit", pageable);
+
+        assertNotNull(result);
+        assertEquals(2, result.getTotalElements());
+        assertTrue(result.getContent().contains(bookEntity1));
+        assertTrue(result.getContent().contains(bookEntity2));
     }
 
     @Test
-    void testFilterBooksByAuthor() {
-        when(bookRepository.findByAuthorContaining(anyString()))
-                .thenReturn(List.of(bookEntity1, bookEntity2));
+    void testFindPageableWithoutQueryParam_Success(){
+        
+        Page<BookEntity> bookPage = new PageImpl<>(Arrays.asList(bookEntity1, bookEntity2));
 
-        List<BookEntity> result = bookService.filterBooksBy(null, "Tolkien");
-        assertThat(result).hasSize(2).contains(bookEntity1, bookEntity2);
+        when(bookRepository.findAll(pageable)).thenReturn(bookPage);
+
+        Page<BookEntity> result = bookService.findPageable(null, pageable);
+
+        assertNotNull(result);
+        assertEquals(2, result.getTotalElements());
+        assertTrue(result.getContent().contains(bookEntity1));
+        assertTrue(result.getContent().contains(bookEntity2));
     }
 
     @Test
-    void testFilterBooksByNoParams() {
-        when(bookRepository.findAll())
-                .thenReturn(List.of(bookEntity1, bookEntity2));
+    void testFindPageableEmptyResult_Success(){
 
-        List<BookEntity> result = bookService.filterBooksBy(null, null);
-        assertThat(result).hasSize(2).contains(bookEntity1, bookEntity2);
+        Page<BookEntity> bookPage = new PageImpl<>(Collections.emptyList());
+
+        when(bookRepository.findByTitleContainingIgnoreCaseOrAuthorContainingIgnoreCase("Nonexistent", "Nonexistent", pageable)).thenReturn(bookPage);
+        
+        Page<BookEntity> result = bookService.findPageable("Nonexistent", pageable);
+
+        assertNotNull(result);
+        assertEquals(0, result.getTotalElements());
+    }
+
+    @Test
+    void testUpdateBook_Success(){
+
+        when(bookRepository.findById(anyLong())).thenReturn(Optional.of(bookEntity1));
+        when(bookRepository.save(any(BookEntity.class))).thenReturn(bookEntity2);
+
+        BookEntity result = bookService.updateBook(anyLong(), bookEntity1);
+
+        assertNotNull(result);
+        assertEquals("The Hobbit2", result.getTitle());
+        assertEquals("J.R.R. Tolkien2", result.getAuthor());
+        assertEquals("2222222222222", result.getIsbn());
+        assertEquals("2002", result.getPublicationYear());
+    }
+
+    @Test
+    void testUpdateBook_NotFound(){
+
+        when(bookRepository.findById(anyLong())).thenReturn(Optional.empty());
+
+        assertThrows(ResouceNotFoundException.class, () -> {
+            bookService.updateBook(anyLong(), bookEntity1);
+        });
+    }
+
+    @Test
+    void testUpdateBookInvalidId_IllegalArgumentException(){
+
+        when(bookRepository.findById(anyLong())).thenThrow(new IllegalArgumentException("Invalid ID"));
+
+        assertThrows(IllegalArgumentException.class, () -> {
+            bookService.updateBook(-1L, bookEntity1);
+        });
+    }
+
+    @Test
+    void testUpdateBook_InternalServerError(){
+
+        when(bookRepository.findById(anyLong())).thenReturn(Optional.of(bookEntity1));
+        when(bookRepository.save(any(BookEntity.class))).thenThrow(new RuntimeException("Internal server error"));
+
+        assertThrows(RuntimeException.class, () -> {
+            bookService.updateBook(anyLong(), bookEntity2);
+        });
     }
 }
